# wled_ros_wrapper

./: .gitmodules  CMakeLists.txt  README.md  package.xml
.github/workflows/: CI.yml
config/: default.yaml
include/: template.hpp  wrapper.hpp
launch/: default.launch
msg/: TemplateMessage.msg  WLED.msg  WLEDEffect.msg
scripts/: template.py
src/: template.cpp  wrapper.cpp
srv/: TemplateService.srv
