<?xml version="1.0"?>
<package format="2">
	<name>wled_ros_wrapper</name>
	<version>1.0.0</version>
	<description>ROS Wrapper for controlling WLED strips using the HTTP API</description>

	<author email="ekampourakis@ceid.upatras.gr">Manos Kampourakis</author>

	<maintainer email="ekampourakis@ceid.upatras.gr">Manos Kampourakis</maintainer>

	<license>Unlicensed</license>
	<url type="website">https://github.com/ekampourakis/wled_ros_wrapper/</url>

	<buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>

    <depend>message_generation</depend>
    <depend>message_runtime</depend>

    <depend>std_msgs</depend>

	<export></export>

</package>